--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "dist",
-        "lib": ["ES2018", "DOM"]
+        "lib": ["ES2018", "DOM"],
+        "target": "ES5"
     }
 }
